--- a/css/sach/sach.css
+++ b/css/sach/sach.css
@@ -65,15 +65,36 @@
 }
 
 
-#sach-box-lien-he {
+#book-price {
     display: flex;
+    width: 595px;
     align-items: center;
-    width: 100%;
-    height: 81px;
+    gap: 20px;
+    margin-bottom: 15px;
+}
+
+#sale-price {
     font-size: 30px;
     color: green;
-    font-weight: bold;
-    border-bottom: 0.5px solid #EEEEEE;
+    font-weight: bolder;
+}
+
+#real-price {
+    font-size: 20px;
+    color: #777777;
+    text-decoration: line-through;
+}
+
+#sale {
+    width: 49px;
+    height: 23px;
+    background-color: #EB5757;
+    border-radius: 5px;
+    color: #fff;
+    font-size: 12px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 #sach-box-right-san {
@@ -132,7 +153,7 @@
 }
 
 #thong-tin {
-    
+
     flex: 1;
 }
 
