--- a/css/tac-gia/tac-gia.css
+++ b/css/tac-gia/tac-gia.css
@@ -1,13 +1,14 @@
 #box-content {
-    width: 80%;
-    height: 850px;
+    width: 100%;
+    height: 700px;
     margin: 0 auto;
     display: flex;
+    justify-content: center;
 
 }
 
-#tac-gia-title {
-    width: 80%;
+#title {
+    width: 100%;
     display: flex;
     justify-content: space-between;
     margin: 0 auto;
@@ -15,13 +16,25 @@
     font-weight: bolder;
 }
 
+#title-tac-gia {
+    justify-items: center;
+    width: 38%;
+}
+
+#title-tin {
+    justify-items: center;
+    width: 60%;
+}
+
+#title-tin {
+    font-weight: bold;
+    font-size: 20px;
+}
 
 #tac-gia-content {
-    flex: 2.5;
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr;
-    grid-template-rows: 1fr 1fr 1fr ;
-
+    grid-template-columns: 222px 222px 222px 222px;
+    grid-template-rows: 233px 233px 233px ;
 }
 
 
@@ -46,7 +59,7 @@
 }
 
 #tin-content {
-    flex: 1;
+    width: 303px;
 }
 
 .tins img {
@@ -83,4 +96,56 @@
 #tins-content-date {
     font-size: 14px;
     color: gray;
+}
+
+/* pages */
+
+#pages {
+    width: 950px;
+    height: 25px;
+    display: flex;
+    justify-content: center;
+    margin: 60px auto;
+}
+
+#pages-content {
+    width: 28%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+#pages-content p a {
+    font-size: 14px;
+    text-decoration: none;
+    color: black;
+}
+
+#pages-content i a {
+    font-size: 14px;
+    text-decoration: none;
+    color: black;
+}
+
+#pages-content p:hover {
+    border-radius: 50%;
+    border: 1px solid green;
+}
+
+#pages-content i:hover {
+    border-radius: 50%;
+    border: 1px solid green;
+}
+
+#page-now {
+    border-radius: 50%;
+    border: 1px solid green;
+}
+
+.page {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 24px;
+    height: 24px;
 }
