--- a/css/loai-sach/loai-sach.css
+++ b/css/loai-sach/loai-sach.css
@@ -12,7 +12,7 @@
 
 #loai-sach-content {
     width: 1290px;
-    height: 2150px;
+    height: 100%;
     display: flex;
     flex-direction: row;
     margin: 0 auto;
@@ -24,9 +24,10 @@
 
 
 #sach-box {
+    height: 100%;
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr;
-    grid-template-rows: 1fr 1fr 1fr 1fr 1fr;
+    grid-auto-rows: minmax(0, 350px);
 }
 
 .sachs {
@@ -103,7 +104,7 @@
 #sach-box {
     margin: 0 auto;
     width: 100%;
-    height: 2050px;
+    height: 100%;
 }
 
 #quoc-gia {
@@ -131,7 +132,7 @@
     height: 25px;
     display: flex;
     justify-content: center;
-    margin-bottom: 30px;
+    margin: 60px 0;
 }
 
 #pages-content {
